2012-04-30  Tom Zakrajsek  <tomz@codeaurora.org>

        Unreviewed gardening

        * platform/qt/test_expectations.txt:

2012-04-30  Sadrul Habib Chowdhury  <sadrul@chromium.org>

        [chromium] Disable battery-status API support.
        https://bugs.webkit.org/show_bug.cgi?id=84499

        Reviewed by Adam Barth.

        * platform/chromium/fast/dom/navigator-detached-no-crash-expected.txt:
        * platform/chromium/test_expectations.txt:

2012-04-30  Gavin Barraclough  <barraclough@apple.com>

        Arguments object resets attributes on redefinition of a parameter
        https://bugs.webkit.org/show_bug.cgi?id=84994

        Rubber stamped by Oliver Hunt.

        * fast/js/arguments-expected.txt:
        * fast/js/script-tests/arguments.js:
            - Added test cases.

2012-04-30  Kentaro Hara  <haraken@chromium.org>

        WebGLRenderingContext methods should throw TypeError for not enough arguments
        https://bugs.webkit.org/show_bug.cgi?id=84787

        Reviewed by Kenneth Russell.

        Currently, WebGLRenderingcontext methods implement
        "Not enough arguments" error as SyntaxError. The Web IDL
        spec requires that it should be TypeError:
        http://www.w3.org/TR/WebIDL/#dfn-overload-resolution-algorithm

        This patch changes SyntaxError to TypeError.

        * fast/canvas/webgl/webgl-exceptions-expected.txt: Added.
        * fast/canvas/webgl/webgl-exceptions.html: Added.

2012-04-30  Abhishek Arya  <inferno@chromium.org>

        Remove positioned float code.
        https://bugs.webkit.org/show_bug.cgi?id=84795
 
        Reviewed by Dan Bernstein.

        * fast/block/float/positioned-float-crash-expected.txt: Added.
        * fast/block/float/positioned-float-crash.html: Added.

2012-04-30  Sam Weinig  <sam@webkit.org>

        Remove BlobBuilder
        https://bugs.webkit.org/show_bug.cgi?id=84036

        Reviewed by Anders Carlsson.

        * fast/js/constructor-length.html: