@@ -1,29 +1,0 @@
-layer at (0,0) size 800x600
-  RenderView at (0,0) size 800x600
-layer at (0,0) size 800x105
-  RenderBlock {HTML} at (0,0) size 800x105
-    RenderBody {BODY} at (8,21) size 784x76
-      RenderBlock {H1} at (0,0) size 784x37
-        RenderText {#text} at (0,0) size 759x37
-          text run at (0,0) width 759: "Testing the values of 'pointer-events' on HTML content"
-      RenderBlock {DIV} at (0,58) size 784x18
-        RenderText {#text} at (0,0) size 448x18
-          text run at (0,0) width 448: "The labels on the left will be clicked and the result is shown to the right"
-      RenderBlock {DIV} at (0,76) size 784x0
-layer at (10,120) size 100x30
-  RenderBlock (positioned) {P} at (10,120) size 100x30
-    RenderText {#text} at (0,0) size 35x23
-      text run at (0,0) width 35: "auto"
-layer at (140,120) size 100x30
-  RenderBlock (positioned) {P} at (140,120) size 100x30
-    RenderText {#text} at (0,0) size 33x23
-      text run at (0,0) width 33: "HIT"
-layer at (10,160) size 100x30
-  RenderBlock (positioned) {P} at (10,160) size 100x30
-    RenderText {#text} at (0,0) size 39x23
-      text run at (0,0) width 39: "none"
-layer at (140,160) size 100x30
-  RenderBlock (positioned) {P} at (140,160) size 100x30
-    RenderText {#text} at (0,0) size 33x23
-      text run at (0,0) width 33: "HIT"
-caret: position 0 of child 0 {#text} of child 3 {P} of child 5 {DIV} of body
